Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-698

ssl transport does not verify the server certificate

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.1.0
    • core/transport
    • None

    Description

      The ssl transport sender does not check if whether the server certificate is trusted valid. Hence, it allows connections with any server, even when the CA certificates provided can't be used to create a valid certificate chain.

      Attachments

        Activity

          People

            dumindu Pallewela Perera
            dumindu Pallewela Perera
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: