Fixed JIRA AXIS2C-698. SSL transport now verifies the certificate chain. Added code for logging on ssl_client.